# llmtxt

./: .env.example  .gitignore  AGENTS.md  API_QUICK_REFERENCE.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_LLM_FIRST.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DNS_SETUP.md  Dockerfile  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.jsonl  MONETIZATION_STRATEGY.md  README.md  RELEASING.md  SPECIFICATION.md  TEST_RESULTS.md  clawmsgr-agent.json  data.db-shm  data.db-wal  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: audit-chain-verify.yml  backup-monthly.yml  backup-nightly.yml  backup-weekly.yml  ci.yml  load-regression.yml  postman-generate.yml  release-backend.yml  release-rust.yml  release.yml  restore-drill-monthly.yml  slo-report.yml  subpath-contract.yml  tsa-freshness-check.yml  workflow-syntax-check.yml
apps/backend/: .env.example  .eslintrc.json  drizzle-pg.config.ts  forge-ts.config.ts  openapi.json  package.json  postman-collection.json
apps/demo/: Dockerfile  README.md  package.json  railway.toml
apps/docs/: next.config.mjs  package.json  railway.toml
apps/frontend/: README.md  package.json  railway.toml  svelte.config.js
apps/web/: forge-ts.config.ts  package.json  tsconfig.json
claudedocs/agent-outputs/: MANIFEST.jsonl  T000-post-burst-qa.md  T009-T010-T011-monetization-reconcile.md  T014-llm-first-content-delivery.md  T030-T031-frontend-ux-polish.md  T086-T090-reconcile.md  T092-graceful-shutdown.md  T094-gdpr-data-export.md  T102-T103-semantic-embeddings.md  T107-audit-log-reconciliation.md  T119-T125-wave-b-disclosure-tfidf.md  T121-T122-T123-wave-b2-port-validation-graph-similarity.md  T142-ci-lint-ban-crypto.md  T144-migration-safety-ci.md  T145-observability-wave0.md  T146-crdt-backend-sdk-tests.md  T149-T150-T151-rcasd.md  T152-T153-T154-rcasd.md  T162-T163-web-security-bundle.md  T164-tamper-evident-audit-log.md  T165-webhook-hardening.md  T166-rls-decomposition.md  T167-anonymous-threat-model.md  T168-gdpr-deep.md  T169-openapi-dx.md  T172-reference-agents-demo.md  T184-T185-T188-wave-e-compliance.md  T212-w3c-trace-context.md  T215-ops-runbook.md  T233-postgres-migration-rcasd.md  T234-postgres-js-dual-client.md  T236-postgres-migration-generation.md  T238-pg-test-harness.md  T239-postgres-ephemeral-ci-service.md  T240-sqlite-to-postgres-migration.md  T246-schema-consolidator.md  T307-self-host-observability.md  T308-e2e-production-verification.md  T308-remaining-bugs.md  T308-run-2-logs.txt  (+68 more)
crates/llmtxt-core/: .gitignore  .versionguard.yml  CHANGELOG.md  Cargo.toml  README.md  tarpaulin-report.json
crates/llmtxt-core/benches/: compression.rs
crates/llmtxt-core/src/: a2a.rs  bft.rs  billing.rs  blob.rs  canonical.rs  cherry_pick.rs  consensus.rs  crdt.rs  crypto.rs  diff.rs  diff_multi.rs  export_archive.rs  graph.rs  identity.rs  key_rotation.rs  lib.rs  lifecycle.rs  merkle.rs  native_signed_url.rs  normalize.rs  patch.rs  rbac.rs  retention.rs  semantic.rs  similarity.rs  slugify.rs  tfidf.rs  three_way_merge.rs  validation.rs  wasm_bindings.rs
crates/llmtxt-core/src/classify/: SPEC.md  heuristic.rs  magic.rs  mod.rs  text_gate.rs  types.rs
crates/llmtxt-core/src/disclosure/: code.rs  json.rs  jsonpath.rs  markdown.rs  mod.rs  search.rs  section_extract.rs  tests.rs  text.rs  types.rs  wasm_bindings.rs
crates/llmtxt-core/tests/: blob_test.rs  canonical_test.rs  crdt_loro_identity.rs  cross_language_vectors.rs  multi_version_diff_test.rs
docs/: API.md  ARCHITECTURE-PRINCIPLES.md  ARCHITECTURE.md  LLMTXT-REFERENCE.md  MASTER-PLAN-TO-9.5.md  RED-TEAM-ANALYSIS-2026-04-15.md  RED-TEAM-ANALYSIS-2026-04-16.md  RED-TEAM-ANALYSIS.md  SHIP-ORDER.md  SSOT-AUDIT.md  SSOT.md  VISION.md  architecture-v2.md  cleo-migration-guide.md  red-team-2026-04-15-epic-tree.md
docs/adr/: ADR-T144-migration-safety-ci.md  ADR-T145-observability-stack.md  ADR-T146-crdt-architecture.md  ADR-T147-ed25519-signature-verification.md  ADR-T148-document-event-log.md  ADR-T233-postgres-migration.md
docs/api/: compression.md  error-codes.md  leases.md  openapi.json  postman-collection.json
docs/architecture/: deprecation-policy.md  subpath-contract.md
docs/business/: monetization-investigation.md
docs/compliance/: controls-inventory.csv  data-residency.md  dpa-template.md  evidence-vault.md  gdpr-erasure.md  pii-inventory.md  retention-policy.md  right-to-deletion.md  soc2-auditor-rfp.md  soc2-type1-readiness.md  sub-processors.md  vendor-package.md
docs/decomposition/: T111-decomposition-2026-04-15.md  T112-decomposition-2026-04-15.md  T233-decomposition-2026-04-15.md  T317-decomposition-2026-04-16.md
docs/demo/: README.md  clean-reset.md
docs/dx/: content-delivery.md  openapi.md  webhooks.md
docs/ops/: CREDENTIALS.md  backup-restore-runbook.md  deployment.md  graceful-shutdown.md  observability-runbook.md  pgvector-setup.md  redis-setup.md  release-runbook.md  secret-rotation.md  slo.md
docs/plans/: llmtxt-SDK-Restructure-PLAN.md
docs/research/: T144-migration-safety-ci.md  T145-observability-stack.md  T146-crdt-yrs-phase2.md  T147-ed25519-verified-identity.md  T148-document-event-log.md  T233-postgres-migration.md
docs/runbooks/: postgres-cutover.md
docs/security/: ANON-THREAT-MODEL.md  XSS-RENDER-PATHS.md  headers.md  red-team-remediation.md  rls.md
docs/spec/: SPEC-T144-migration-safety-ci.md  SPEC-T145-observability-stack.md  SPEC-T146-yrs-crdt.md  SPEC-T147-ed25519-identity.md  SPEC-T148-document-event-log.md  SPEC-T233-postgres-migration.md
docs/specs/: ARCH-T426-ephemeral-agent-lifecycle.md  ARCH-T427-document-export-ssot.md  T166-rls.md  (+17 more)
examples/: README.md
examples/audit-verifier/: Cargo.toml  README.md
examples/audit-verifier/src/: main.rs
ops/: RUNBOOK.md  SLO.md  load-baseline.md  slo-verification.md
public/: index.html  llms.txt
scripts/: pre-release-check.sh  snapshot-subpath-types.sh  validate-changelog.sh
src/: index.ts
(+455 files in other folders)
