[package]
name = "llmtxt-core"
version = "2026.4.5"
edition = "2024"
description = "Core primitives for llmtxt: compression, patching, hashing, signing, and encoding"
license = "MIT"
repository = "https://github.com/kryptobaseddev/llmtxt"
homepage = "https://github.com/kryptobaseddev/llmtxt/tree/main/crates/llmtxt-core"
documentation = "https://docs.rs/llmtxt-core"
readme = "README.md"
keywords = ["llm", "agent", "patch", "wasm", "signing"]
categories = ["compression", "encoding", "wasm", "text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# CRDT feature: enables Yrs document-level CRDT primitives.
# Off by default — wasm-pack consumers activate via --features crdt.
# y-sync is NOT included here because it pulls tokio and breaks WASM builds.
crdt = ["dep:yrs"]

[dependencies]
flate2 = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ed25519 identity primitives (T217)
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

# WASM-only deps — not pulled in by native Cargo consumers
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Native-only deps — only used behind cfg(not(wasm32))
url = "2"
diffy = "0.4.2"
yrs = { version = "0.25", optional = true, features = [] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
ferrous-forge = { version = "1.9", default-features = false }

[lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"
missing_crate_level_docs = "warn"

[profile.release]
opt-level = "s"
lto = true
