[package]
name = "llmtxt-core"
version = "2026.4.12"
edition = "2024"
description = "Core primitives for llmtxt: compression, patching, hashing, signing, and encoding"
license = "MIT"
repository = "https://github.com/kryptobaseddev/llmtxt"
homepage = "https://github.com/kryptobaseddev/llmtxt/tree/main/crates/llmtxt-core"
documentation = "https://docs.rs/llmtxt-core"
readme = "README.md"
keywords = ["llm", "agent", "patch", "wasm", "signing"]
categories = ["compression", "encoding", "wasm", "text-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# CRDT feature: enables Loro document-level CRDT primitives.
# Off by default — wasm-pack consumers activate via --features crdt.
# Loro replaces Yrs (T388): their binary encodings are incompatible — clean break only.
crdt = ["dep:loro"]

[dependencies]
flate2 = "1"
zstd = { version = "0.13", default-features = false }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ed25519 identity primitives (T217)
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
# Constant-time comparison for secret comparison (T108.7, crypto.rs)
subtle = "2"
# Layer 1: magic-byte content type detection (T821, Wave-2 classify module)
infer = { version = "0.19", default-features = false, features = ["alloc"] }
# Layer 2: text/binary gate via byte-frequency analysis (T821, Wave-2 classify module)
content_inspector = "0.2.4"

# WASM-only deps — not pulled in by native Cargo consumers
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Native-only deps — only used behind cfg(not(wasm32))
url = "2"
diffy = "0.4.2"
# Loro CRDT — replaces yrs (T388). Pin to 1.x; incompatible with Yrs binary format.
loro = { version = "1.0", optional = true }

[[bench]]
name = "compression"
harness = false
# Bench only targets native — not compiled for wasm32.
required-features = []

[dev-dependencies]
wasm-bindgen-test = "0.3"
ferrous-forge = { version = "1.9", default-features = false }

# criterion is a native-only dev-dep; it pulls in mio which is incompatible
# with wasm32-unknown-unknown. Gate it behind cfg(not(target_arch="wasm32"))
# so wasm-pack builds don't try to compile it.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"
missing_crate_level_docs = "warn"

[profile.release]
opt-level = "s"
lto = true
